# PythonCourse

./: .gitignore  README.md
Homework1/: nl.py  tail.py  wc.py
Homework1/atrifacts/: nl-test.txt  tail-test.txt  wc-test.txt
Homework2/: Dockerfile  README.md  generate.py  main.py  requirements.txt
Homework2/artifacts/: link.md  table.tex
Homework2/texstring-local/: README.md  pyproject.toml  texstring.py
Homework3/: matrix1.py  matrix2.py  matrix3.py
Homework3/artifacts/3.1/: matrix*.txt  matrix+.txt  matrix@.txt
Homework3/artifacts/3.3/: A.txt  AB.txt  CD.txt  hash.txt
Homework4/: application.py  fib.py  integration.py
Homework4/artifacts/: application-log.txt  fibtimings.txt  integration-timings.txt
